# crewai_crews

cyberthreat_article_process/: README.md  pyproject.toml
cyberthreat_article_process/db/threats/: chroma.sqlite3
cyberthreat_article_process/memory/: latest_kickoff_task_outputs.db
cyberthreat_article_process/src/cyberthreat_article_process/: main.py
cyberthreat_article_process/src/cyberthreat_article_process/crawler/: cyber_threat_crawler.py
cyberthreat_article_process/src/cyberthreat_article_process/crews/is_report_worth_processing/: is_report_worth_processing.py
cyberthreat_article_process/src/cyberthreat_article_process/crews/is_report_worth_processing/config/: agents.yaml  tasks.yaml
cyberthreat_article_process/src/cyberthreat_article_process/crews/report_processing/: report_processing.py
cyberthreat_article_process/src/cyberthreat_article_process/schema/: models.py
cyberthreat_article_process/src/cyberthreat_article_process/scraper/: cyber_threat_scaper.py
cyberthreat_article_process/src/cyberthreat_article_process/tools/report_processing/: chroma_db_tool.py  save_summary_tool.py
report_crew/: README.md  pyproject.toml  report.md
report_crew/chroma_db/: chroma.sqlite3
report_crew/memory/: latest_kickoff_task_outputs.db
report_crew/src/report_crew/: crew.py  main.py
report_crew/src/report_crew/config/: agents.yaml  tasks.yaml
report_crew/src/report_crew/tools/: chroma_db_tool.py  report_parser.py  save_summary_tool.py
report_crew/threats/: 2025-02-20_11-03-47.md  2025-02-20_11-13-26.md
working_scripts/: crawler_with_random_title.py  (+4 more)
(+2 files in other folders)
