[project]
name = "report_crew"
version = "0.1.0"
description = "report_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "ollama>=0.4.7",
]

[project.scripts]
report_crew = "report_crew.main:run"
run_crew = "report_crew.main:run"
train = "report_crew.main:train"
replay = "report_crew.main:replay"
test = "report_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
